<?xml version="1.0"?>

<package format="2">

  <name>ocs2_comm_interfaces</name>
  <version>0.0.0</version>
  <description>The ocs2 communication interfaces package</description>

  <license>TODO</license>
  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>cmake_clang_tools</build_depend>

  <depend>roscpp</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_ocs2</depend>
  <depend>ocs2_mpc</depend>

</package>
