<?xml version="1.0"?>
<package format="3">
  <name>ocs2_core</name>
  <version>0.0.0</version>
  <description>The ocs2_core package</description>

  <maintainer email="farbod.farshidian@gmail.com">Farbod Farshidian</maintainer>
  <maintainer email="jcarius@ethz.ch">Jan Carius</maintainer>
  <maintainer email="rgrandia@ethz.ch">Ruben Grandia</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ocs2_thirdparty</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
